Bug 1436086: Implement keyboard navigation for the main and Bookmarks toolbars. r=Gijs
Having separate tab stops for every toolbar control results in an unmanageable number of tab stops.
Therefore, we group several buttons under a single tab stop and allow movement between them using left/right arrows.
However, text inputs use the arrow keys for their own purposes, so they need their own tab stop.
There are also groups of buttons before and after the URL bar input which should get their own tab stop.
The subsequent buttons on the toolbar are then another tab stop after that.

Tab stops for groups of buttons are set using the <toolbartabstop/> element.
This element is invisible, but gets included in the tab order.
When one of these gets focus, it redirects focus to the appropriate button.
This avoids the need to continually manage the tabindex of toolbar buttons in response to toolbarchanges.

Navigation to for the View site information button and notification anchors is now managed by this new framework.
As such, they no longer need their own position in the tab order and the CSS has been tweaked accordingly.

For now, this new functionality is behind a pref (browser.toolbars.keyboard_navigation) which is currently disabled by default.

Differential Revision: https://phabricator.services.mozilla.com/D15060

UltraBlame original commit: a14a11bf2d6f834dbf2ebcb45e9d1d61e1af3aaf

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -6164,6 +6164,19 @@ none
 ;
 }
 #
+nav
+-
+bar
+:
+not
+(
+[
+keyNav
+=
+true
+]
+)
+#
 identity
 -
 box
@@ -7539,6 +7552,19 @@ notifications
 are
 *
 /
+#
+nav
+-
+bar
+:
+not
+(
+[
+keyNav
+=
+true
+]
+)
 .
 notification
 -
@@ -10360,6 +10386,42 @@ inherit
 )
 ;
 }
+}
+toolbar
+[
+keyNav
+=
+true
+]
+:
+not
+(
+[
+collapsed
+=
+true
+]
+)
+:
+not
+(
+[
+customizing
+=
+true
+]
+)
+toolbartabstop
+{
+-
+moz
+-
+user
+-
+focus
+:
+normal
+;
 }
 %
 include
